# MarketingTool

./: .gitignore  README.md  dev.sh
.claude/: launch.json
backend/: .env.example  PROMPTS.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 009e8f73d989_competitor_is_primary.py  2be1a3784dff_competitor_scopes_regions.py  34352537431f_llm_runs_table.py  537658c2c31d_drop_voice_profiles.py  6b5a717b7aed_phase1_brands_table.py  887e094333be_competitors_table_fetched.py  9a3167465afb_phase3_voice_profiles.py  9e43278d6ab2_competitor_source.py  a0b89ffd7554_persona_structured_subparts.py  b1c2d3e4f5a6_brand_voice.py  b657dfd986a3_analysis_passes_table.py  ced749eda21c_phase2_personas_and_variants.py  d7048605b8f7_competitor_analysis_jsonb.py
backend/app/: main.py
backend/app/api/: analysis.py  brands.py  competitors.py  content.py  personas.py  voice.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  analysis_pass.py  brand.py  competitor.py  persona.py  run.py  voice.py
backend/app/schemas/: brand.py  competitor.py  content.py  persona.py  voice.py
backend/app/services/: llm.py  report.py  run_log.py  run_store.py
frontend/: vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AnalysisExport.tsx  BrandInputs.tsx  CompetitorAgent.tsx  CompetitorFeatures.tsx  ContentCreator.tsx  ICPBuilder.tsx
